# LakLok

./: .gitignore  CMakeLists.txt  main.cpp  test.h
game_map/: 01.json
game_script/: script.h  script_map.h
game_script/scenes/: 01.cpp
includes/: Game.h  SDL_util.cpp  SDL_util.h  renderer.cpp  renderer.h  scene.h  test.h  type.h
includes/component/: base.h  component_type.h  container.h  touchable.h  view.h
includes/util/: array.h  timercpp.h
scenes/: introGame1.cpp  introGame2.cpp  introGame3.cpp  introGame4.cpp  mainGame1.cpp  mainGame2.cpp  mainGame2Shop.cpp  mainGame3.cpp  mainGame4.cpp  menu.cpp  scene_list.h
source_files/: Game.cpp  SDL_util.cpp  renderer.cpp  scene.cpp
source_files/component/: base.cpp  container.cpp  touchable.cpp  view.cpp
source_files/util/: timercpp.cpp
view/: view_loader.h
